# 2026_03_17

./: README.md
install/: local_setup.sh  setup.sh
install/my_first_package/share/my_first_package/: package.sh
install/my_first_package/share/my_first_package/launch/: dist_turtle_action.launch.py  turtlesim_and_teleop.launch.py
install/my_first_package_msgs/include/my_first_package_msgs/my_first_package_msgs/action/detail/: dist_turtle__struct.hpp
install/my_first_package_msgs/include/my_first_package_msgs/my_first_package_msgs/msg/detail/: cmd_and_pose_vel__struct.hpp
install/my_first_package_msgs/include/my_first_package_msgs/my_first_package_msgs/srv/detail/: multi_spawn__struct.hpp
install/my_first_package_msgs/share/my_first_package_msgs/: package.sh  package.xml
install/my_second_package/lib/my_second_package/: dist_turtle_action_server
install/my_second_package/share/ament_index/resource_index/parent_prefix_path/: my_second_package
install/my_second_package/share/my_second_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_second_package/share/my_second_package/cmake/: my_second_packageConfig.cmake
log/: latest_build
src/my_first_package/: package.xml  setup.py
src/my_first_package/my_first_package/: import rclpy as rp.py  my_publisher.py  my_subscriber.py
src/my_first_package_msgs/: CMakeLists.txt
src/my_second_package/: CMakeLists.txt  dist_turtle_action_server.cpp  package.xml
src/my_second_package/src/: dist_turtle_action_server.cpp
